# LUMEN

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/: models.yaml  models_claude_only.yaml  v2_settings.yaml
configs/: default.yaml  models.yaml
data/: .active_project
lumen/: __init__.py
prompts/: arbiter.yaml  extractor_round1.yaml  extractor_round2.yaml  extractor_round3.yaml  extractor_round4.yaml  fact_checker.yaml  fulltext_screener.yaml  harmonizer.yaml  pico_interviewer.yaml  quality_assessor.yaml  screener.yaml  statistician_interpret.yaml  statistician_plan.yaml  strategy_generator.yaml  writer_section.yaml  writer_synthesis.yaml
scripts/: check_progress.py  check_sciencedirect.py  collect_domain_report.py  diagnose_duplicates.py  diagnose_phase4.py  diagnose_pipeline.py  doi_hunter.py  enrich_abstracts.py  export_manual_queries.py  export_prisma_diagram.py  export_run_report.py  extract_DOI.py  generate_review.py  rename_zotero_pdfs.py  run_cost_report.py  run_extraction_ablation.py  run_intervention_report.py  run_nma.py  run_pdf_to_markdown.py  run_phase1.py  run_phase2.py  run_phase2_5_prescreen.py  run_phase2_6_ct_lookup.py  run_phase3_3_fulltext_screen.py  run_phase3_stage1.py  run_phase3_stage2.py  run_phase4.py  run_phase4_5.py  run_phase5.py  run_phase6.py  run_pipeline_continue.sh  run_qc.py  run_quality_assessment.py  run_readiness_check.py  run_screening_benchmark.py  run_transparency_report.py  test_cache.py  test_screener1.py  validate_extraction.py  validate_screening.py  (+1 more)
src/: __init__.py  (+1 more)
(+250 files in other folders)
